# system-idle-time

./: Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.github/workflows/: check.yml  publish.yml
examples/: per-second.rs
src/: lib.rs
src/linux/: mod.rs
src/macos/: mod.rs
src/win/: mod.rs
