[package]
name = "system-idle-time"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.0", features = ["Win32_System_SystemInformation", "Win32_UI_Input_KeyboardAndMouse"] }
