[package]
name = "system-idle-time"
version = "1.0.0"
edition = "2024"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.0", features = ["Win32_System_SystemInformation", "Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5.12.0", optional = true }
x11rb = { version = "0.13.2", features = ["screensaver"], optional = true }
serde = { version = "1.0.228", optional = true }

[features]
default = ["wayland", "x11"]
wayland = ["zbus", "serde"]
x11 = ["x11rb"]
